# SoloCoder_0To1_18

./: README.md  main.py  morphology_cpp.cp39-win_amd64.pyd  requirements.txt  setup.py
image_proc_env/Scripts/: activate  activate.bat
morphology/: CMakeLists.txt  bindings.cpp  morphology.cpp  morphology.h
